2013-02-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php
	  operation/projects/people_manager.php
	  operation/todo/todo.php
	  operation/user_report/monthly.php
	  operation/user_report/report_annual.php
	  operation/user_report/report_full.php
	  operation/users/user_spare_workunit.php: Encapsulate
	user's search and changed filter.

	* include/functions_user.php
	  include/ajax/users.php: Added files.

2013-02-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php
	 index.php: Added develop_bypass variable necessary for development.

2013-02-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* integria_demo.sql: Added fields 'num_employee' in tusuario, added
	'last_stat_check' and 'closed_by' in tincidencia.

2013-02-05  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.sql
	  godmode/usuarios/configurar_usuarios.php
	  include/functions_incidents.php: Added field 'num_employee'
	to 'tusuario'.

2013-02-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/incidents_setup.php
	  godmode/setup/inventories_setup.php
	  godmode/setup/setup.php
	  godmode/setup/setup_mail.php
	  godmode/setup/setup_mailtemplates.php
	  godmode/setup/setup_visual.php
	  godmode/setup/setup_pandora.php
	  godmode/setup/setup_auth.php
	  operation/side_menu.php
	  operation/incidents/incident.php: Changed links to tabs
	and remove to menu.

	* operation/incidents/incident_detail.php
	  operation/incidents/incident.php
	  operation/incidents/incident_type_field.php: Changed fields
	order and fixed several bugs.

	* include/languages/date_en_GB.js
	  images/email_edit.png
	  images/pandora.ico: Added files.

2013-02-01  Sancho Lerena <slerena@artica.es>

	* operation/download/browse.php: FIxed ownload
	pagination.

2013-02-01  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/incidents_setup.php
	  godmode/setup/inventories_setup.php
	  godmode/setup/setup.php
	  godmode/setup/setup_mail.php