@@ -37,6 +37,7 @@ CREATE TABLE `tusuario` (
   `failed_attempt` int(4) NOT NULL DEFAULT 0,
   `login_blocked` tinyint(1) unsigned NOT NULL DEFAULT 0,
   `num_employee` varchar(125) NOT NULL default '',
+  `enable_login` tinyint(1) NOT NULL default '1',
    PRIMARY KEY  (`id_usuario`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
