@@ -1,6 +1,6 @@
-INSERT INTO `tusuario` (`id_usuario`, `nombre_real`, `password`, `comentarios`, `fecha_registro`, `direccion`, `telefono`, `nivel`, `avatar`, `lang`, `pwdhash`, `disabled`, `id_company`, `simple_mode`, `force_change_pass`, `last_pass_change`, `last_failed_login`, `failed_attempt`, `login_blocked`, `num_employee`) VALUES ('admin','Default Admin','2f62afb6e17e46f0717225bcca6225b7','Default Integria Admin superuser. Please change password ASAP','2012-10-16 17:22:45','admin@integria.sf.net','555-555-555',1,'people_1','','',0,0,0,0,'0000-00-00 00:00:00','0000-00-00 00:00:00',0,0,'');
+INSERT INTO `tusuario` (`id_usuario`, `nombre_real`, `password`, `comentarios`, `fecha_registro`, `direccion`, `telefono`, `nivel`, `avatar`, `lang`, `pwdhash`, `disabled`, `id_company`, `simple_mode`, `force_change_pass`, `last_pass_change`, `last_failed_login`, `failed_attempt`, `login_blocked`, `num_employee`, `enable_login`) VALUES ('admin','Default Admin','2f62afb6e17e46f0717225bcca6225b7','Default Integria Admin superuser. Please change password ASAP','2012-10-16 17:22:45','admin@integria.sf.net','555-555-555',1,'people_1','','',0,0,0,0,'0000-00-00 00:00:00','0000-00-00 00:00:00',0,0,'',1);
 
-INSERT INTO `tusuario` (`id_usuario`, `nombre_real`, `password`, `comentarios`, `fecha_registro`, `direccion`, `telefono`, `nivel`, `avatar`, `lang`, `pwdhash`, `disabled`, `id_company`, `simple_mode`, `force_change_pass`, `last_pass_change`, `last_failed_login`, `failed_attempt`, `login_blocked`, `num_employee`) VALUES ('javi','Javier Nadie','334c4a4c42fdb79d7ebc3e73b517e6f8','Default Integria standard user. Please change password ASAP','2012-10-16 17:22:45','javi@integria.sf.net','555-555-555',1,'people_2','','',0,0,0,0,'0000-00-00 00:00:00','0000-00-00 00:00:00',0,0,'');
+INSERT INTO `tusuario` (`id_usuario`, `nombre_real`, `password`, `comentarios`, `fecha_registro`, `direccion`, `telefono`, `nivel`, `avatar`, `lang`, `pwdhash`, `disabled`, `id_company`, `simple_mode`, `force_change_pass`, `last_pass_change`, `last_failed_login`, `failed_attempt`, `login_blocked`, `num_employee`, `enable_login`) VALUES ('javi','Javier Nadie','334c4a4c42fdb79d7ebc3e73b517e6f8','Default Integria standard user. Please change password ASAP','2012-10-16 17:22:45','javi@integria.sf.net','555-555-555',1,'people_2','','',0,0,0,0,'0000-00-00 00:00:00','0000-00-00 00:00:00',0,0,'',1);
 
 INSERT INTO `tagenda` VALUES (1,'2012-03-15 18:31:00','admin',0,120,1,3,'Dentist!'),(2,'2012-05-01 18:31:00','admin',0,240,2,4,'Take&#x20;my&#x20;wife&#x20;and&#x20;go&#x20;to&#x20;a&#x20;expensive&#x20;restaurant...'),(3,'2012-09-01 18:32:00','admin',0,0,0,4,'Have&#x20;a&#x20;live...&#x20;Holidays&#x20;!'),(4,'2012-10-01 18:32:00','admin',0,0,0,4,'Back&#x20;to&#x20;hell...&#x20;welcome&#x20;to&#x20;the&#x20;office&#x20;!&#x20;:&#40;');
 
