@@ -1,5 +1,13 @@
 2013-02-06  Vanessa Gil <vanessa.gil@artica.es>
 
+	* integria_db.sql
+	  integria_demo.sql
+	  extras/migrate.sql
+	  godmode/usuarios/configurar_usuarios.php: Added
+	'enable_login' field to 'tusuario'.
+
+2013-02-06  Vanessa Gil <vanessa.gil@artica.es>
+
 	* operation/incidents/incident_detail.php
 	  operation/projects/people_manager.php
 	  operation/todo/todo.php
